--- a/app/views/footer.ejs
+++ b/app/views/footer.ejs
@@ -2,8 +2,8 @@
 <div class="legal">UU, le site qui vous a à la colle. UU was made by <a href="//twitter.com/octplane">Octplane</a> with love. Use with caution. Report issues. Have fun.</div>
 <script type="text/javascript" src="/js/jquery-1.6.1.min.js"></script>
 <script type="text/javascript" src="/js/uu.js"></script>
-<script type="text/javascript" src="/c/sjcl/sjcl.js"></script>
-<script type="text/javascript" src="/c/dropzone/dropzone.js"></script>
-<script type="text/javascript" src="/c/highlightjs/highlight.pack.js"></script>
+<script type="text/javascript" src="/b/sjcl/sjcl.js"></script>
+<script type="text/javascript" src="/b/dropzone/downloads/dropzone.min.js"></script>
+<script type="text/javascript" src="/b/highlightjs/highlight.pack.js"></script>
 </body>
 </html>
