More productions fixes.
Removes livereload in production
Listens to Naught signal at process level

--- a/app/views/head.ejs
+++ b/app/views/head.ejs
@@ -5,6 +5,7 @@
 	<meta name="description" content="" />
 	<link rel="stylesheet" type="text/css" href="/c/css/app.css" />
 	<link rel="stylesheet" type="text/css" href="/hi/styles/solarized_light.css" />
+	<?- extraHead ?>
   </head>
 <body>
 	<? include navbar ?>
