--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -39,7 +39,7 @@
   <div class='row'>
     <button class="btn btn-primary" id="reveal-but" type="submit">Raw</button> <button class="btn btn-primary" id="wrap-but" type="submit">Wrap-wrap-wrap</button>  This paste will <?if (never) { ?>never expire<? } else { ?> expire <?= expire ?> <? } ?> and is highlighted as <span id='hljs_lang' class='change_to'></span>.
   </div>
-  <div class='row url-container'><span class="icon permalink"><a href="">Link to this poste:  </a></span><input type="text" size="120" id="paste-url" value="??"></div>
+  <div class='row url-container'><span class="icon permalink"><a href="">Link to this post: </a></span><input type="text" size="120" id="paste-url" value="??"></div>
   <div class='paste-container'>
     <pre>
       <code id='code'></code>
