--- a/app/views/about.ejs
+++ b/app/views/about.ejs
@@ -18,9 +18,9 @@
 <p>UU is open source and can be downloaded from <a href="https://github.com/octplane/uu.js">GitHub</a>.</p>
 <h2>CLI Upload</h2>
 <pre>
-curl -i -H "expire:60" -F name=upload -F filedata=@some-file.txt http://localhost:3000/
+curl -i -H "expire:60" -F name=upload -F filedata=@some-file.txt http://uu.zoy.fr/
 # or
-curl -X POST -dtext="Hello World" -dexpire=60 -XPOST http://localhost:3000/
+curl -X POST -dtext="Hello World" -dexpire=60 -XPOST http://uu.zoy.fr/
 </pre>
 
 <? include footer ?>
