--- a/compiled/css/app.css
+++ b/compiled/css/app.css
@@ -182,10 +182,17 @@
 
 body {
   margin: 0;
-  font-family: Helvetica;
   background-image: url(/img/uu.jpg);
   background-position: 90% 20px;
   background-repeat: no-repeat;
+}
+
+body,
+select,
+button,
+.dropzone {
+  font-family: Helvetica, sans-serif;
+  font-size: 14px;
 }
 
 /* http://colorschemedesigner.com/#3f31Tw0w0w0w0 */
@@ -211,7 +218,6 @@ select,
 button {
   padding: 2px 10px 2px 10px;
   font-family: Helvetica-Light;
-  font-size: 36px;
   color: #000000;
   text-decoration: none;
   text-shadow: 0px 0px 5px #ffffff;
@@ -236,7 +242,6 @@ select[disabled] {
 button:hover {
   padding: 2px 10px 2px 10px;
   font-family: Helvetica-Light;
-  font-size: 36px;
   color: #000000;
   text-decoration: none;
   text-shadow: 0px 0px 5px #ffffff;
@@ -257,7 +262,6 @@ button:hover {
 button:active {
   padding: 2px 10px 2px 10px;
   font-family: Helvetica-Light;
-  font-size: 36px;
   color: #000000;
   text-decoration: none;
   text-shadow: 0px 0px 5px #ffffff;
@@ -285,16 +289,9 @@ button:active {
 
 .top-container {
   position: relative;
-  height: 64px;
-  font-family: Helvetica-Light;
-  font-size: 36px;
-  line-height: 43px;
+  height: 32px;
+  line-height: 16px;
   color: #000000;
-  background-color: rgba(238, 236, 238, 0.9);
-}
-
-.top-container a {
-  text-decoration: none;
 }
 
 .right {
@@ -302,7 +299,7 @@ button:active {
   top: 0;
   right: 0;
   width: 200px;
-  height: 64px;
+  height: 32px;
   padding: 0;
   margin: 0;
 }
@@ -314,14 +311,11 @@ button:active {
 .top-container ul.nav {
   display: inline-block;
   width: 100%;
-  height: 64px;
+  height: 32px;
   padding: 0;
   margin: 0;
 }
 
-.top-container ul.nav.smaller {
-  font-size: 24px;
-}
 
 .top-container ul.nav:before,
 .right:before {
@@ -412,7 +406,11 @@ form {
 }
 
 .swhi {
-  margin: 20px;
+  display: inline-block;
+}
+
+.info {
+  margin-left: 20%;
 }
 
 .attachment {
