--- a/public/css/c.css
+++ b/public/css/c.css
@@ -1,11 +1,15 @@
 body {
-  font-family: Helvetica;
   margin: 0px;
   background-image: url(/img/uu.jpg);
   background-repeat: no-repeat;
   background-position: 90% 20px;
 
 
+}
+
+body, select, button, .dropzone {
+  font-size: 14px;
+  font-family: Helvetica,sans-serif;
 }
 
 /* http://colorschemedesigner.com/#3f31Tw0w0w0w0 */
@@ -35,7 +39,6 @@ select, button{
   padding: 2px 10px 2px 10px;
   color:rgb(0, 0, 0);
   font-family: Helvetica-Light;
-  font-size: 36px;
   text-shadow: 0px 0px 5px rgb(255, 255, 255);
   border-radius:5px 5px 5px 5px;
   -moz-border-radius:5px 5px 5px 5px;
@@ -60,7 +63,6 @@ button:hover{
   padding: 2px 10px 2px 10px;
   color:rgb(0, 0, 0);
   font-family: Helvetica-Light;
-  font-size: 36px;
   text-shadow: 0px 0px 5px rgb(255, 255, 255);
   border-radius:5px 5px 5px 5px;
   -moz-border-radius:5px 5px 5px 5px;
@@ -80,7 +82,6 @@ button:active{
   padding: 2px 10px 2px 10px;
   color:rgb(0, 0, 0);
   font-family: Helvetica-Light;
-  font-size: 36px;
   text-shadow: 0px 0px 5px rgb(255, 255, 255);
   border-radius:5px 5px 5px 5px;
   -moz-border-radius:5px 5px 5px 5px;
@@ -108,22 +109,16 @@ button:active{
 
 .top-container {
   position: relative;
-  background-color: rgba(238,236,238, 0.9);
-  font-family: Helvetica-Light;
-  font-size: 36px;
   color: #000000;
-  line-height: 43px;
-  height: 64px;
+  line-height: 16px;
+  height: 32px;
 
-}
-.top-container a {
-  text-decoration: none;
 }
 
 .right {
   position: absolute;
   top: 0px;
-  height: 64px;
+  height: 32px;
   right: 0px;
   width: 200px;
   margin: 0px;
@@ -137,13 +132,12 @@ button:active{
 
 .top-container ul.nav {
   display: inline-block;
-  height: 64px;
+  height: 32px;
   width: 100%;
   margin: 0px;
   padding: 0px;
 }
 .top-container ul.nav.smaller {
-  font-size: 24px;
 }
 
 
@@ -235,7 +229,11 @@ form {
 }
 
 .swhi {
-  margin: 20px;
+  display: inline-block;
+}
+
+.info {
+  margin-left: 20%;
 }
 
 .attachment {
