--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -22,5 +22,6 @@
     <div id="attachments"><?= attachments ?></div>
     <div id="companions"></div>
   </div>
+</div>
 <? } ?>
 <? include footer ?>
